--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <!-- Home Section -->
     <section id="home">
         <div class="home-container">
-            <h1>Hi, I'm [Your Name]</h1>
+            <h1>Hi, I'm Yenduri Eeshitha</h1>
             <h2>Creative Web Developer & Cloud Enthusiast</h2>
-            <img src="your-photo.jpg" alt="[Your Name]" class="profile-photo">
+            <img src="mypic.jpg" alt="Yenduri Eeshitha" class="profile-photo">
             <p>I specialize in web development, cloud infrastructure, and data visualization...</p>
         </div>
     </section>
@@ -21,7 +21,7 @@
     <!-- About Me Section -->
     <section id="about-me">
         <h2>About Me</h2>
-        <p>I'm a 3rd-year BTech student at KL University, specializing in Cloud Infrastructure and Services...</p>
+        <p>I'm a 3rd-year BTech student at KL University, specializing in Data Science...</p>
         <h3>Education</h3>
         <p>BTech in Computer Science and Information Technology, KL University</p>
         <h3>Experience</h3>
@@ -63,14 +63,14 @@
     <section id="contact">
         <h2>Contact Me</h2>
         <form action="submit-form.php" method="post">
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="email" name="email" placeholder="Your Email" required>
+            <input type="text" name="name" placeholder="Yenduri Eeshitha" required>
+            <input type="email" name="email" placeholder="eeshitha.yenduri@gmail.com" required>
             <textarea name="message" placeholder="Your Message" required></textarea>
             <button type="submit">Send Message</button>
         </form>
         <div class="social-links">
-            <a href="your-linkedin-profile" target="_blank">LinkedIn</a>
-            <a href="your-github-profile" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/eeshitha-yenduri-0222a4250/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/2200090203" target="_blank">GitHub</a>
         </div>
     </section>
 
